# jotunheim

./: .gitignore  LICENSE  Makefile  README.md
.gdb/: tdesc-x86_64.xml
jotunboot/: Cargo.toml  rust-toolchain.toml
jotunboot/.cargo/: config.toml
jotunboot/src/: main.rs  simd.rs
jotunheimkernel/: Cargo.toml  build.rs  kernel.ld  rust-toolchain.toml
jotunheimkernel/.cargo/: config.toml
jotunheimkernel/asm/x86_64/: ap_trampline.asm  ap_trampoline.asm  context_switch.asm  isr_stubs.asm  kthread_trampoline.asm  misc.asm
jotunheimkernel/src/: bootinfo.rs  faultsvc.rs  main.rs  sched.rs  util.rs
jotunheimkernel/src/acpi/: cpuid.rs  madt.rs  mod.rs
jotunheimkernel/src/allocator/: early.rs  frame.rs  heap.rs  mod.rs
jotunheimkernel/src/arch/: mod.rs
jotunheimkernel/src/arch/x86_64/: ap_trampoline.rs  apic.rs  context.rs  gdt.rs  idt.rs  init.rs  ioapic.rs  isr.rs  mmio_map.rs  mod.rs  serial.rs  simd.rs  smp.rs  split_huge.rs  trapframe.rs  tsc.rs
jotunheimkernel/src/arch/x86_64/simd/: caps.rs  mod.rs
jotunheimkernel/src/arch/x86_64/tables/: gdt.rs  idt.rs  mod.rs
jotunheimkernel/src/arch/x86_64/tables/isr/: debug.rs  fault.rs  misc.rs  mod.rs  timer.rs
jotunheimkernel/src/debug/: breakpoint.rs  mod.rs
jotunheimkernel/src/debug/rsp/: arch_x86_64.rs  core.rs  memory.rs  transport.rs
jotunheimkernel/src/mem/: bump.rs  mapper.rs  mod.rs  reserved.rs  simple_alloc.rs
jotunheimkernel/src/sched/: exec.rs  mod.rs  sched_simd.rs
jotunheimkernel/targets/: x86_64-unknown-jotunheim_kernel.json
