[package]
name = "jotunboot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Turn OFF default features so nothing pulls in std.
log = { version = "0.4" }
uefi = { version = "0.35.0", features = ["alloc"], default-features = false }
xmas-elf = "0.9"
spin = { version = "0.10", default-features = false, features = ["once", "mutex", "spin_mutex"] }

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3