[package]
name = "jotunheim-kernel"
version = "0.1.0"
edition = "2024"
authors = ["JotunheimOS Team"]

[[bin]]
name = "jotunheim-kernel"
path = "src/main.rs"    

[dependencies]
x86_64 = "0.15"
spin = { version = "0.10", default-features = false, features = ["once", "mutex", "spin_mutex"] }
uart_16550 = "0.4"
volatile = "0.6.1"
bitflags = "2"
linked_list_allocator = "0.10"
heapless = "0.9.1"

[profile.dev]
debug = true
opt-level = 3
debug-assertions = true
lto = false
panic = "abort"

[profile.release]
panic = "abort"
debug = true
codegen-units = 1
lto = true
opt-level = 3

[build-dependencies]
nasm-rs = "0.3"
