[package]
name = "jotunheim-kernel"
version = "0.1.0"
edition = "2024"
authors = ["JotunheimOS Team"]

[[bin]]
name = "jotunheim-kernel"
path = "src/main.rs"    

[dependencies]
bitflags = "2.9.4"
heapless = "0.9.1"
linked_list_allocator = "0.10.5"
spin = "0.10.0"
uart_16550 = { version = "0.4.0", default-features = false }
volatile = "0.6.1"
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
lto = false
panic = "abort"

[profile.release]
panic = "abort"
debug = false
debug-assertions = false
lto = false
opt-level = 3

[build-dependencies]
nasm-rs = "0.3"
